<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="@dimen/dp5"
            android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/five_dp"
                android:padding="@dimen/ten_dp"
                android:src="@drawable/baseline_arrow_back_white_24"
                android:tint="@color/colorGrey" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgTemp"
                android:layout_toEndOf="@+id/imgBack"
                android:layout_marginStart="@dimen/dp10"
                android:gravity="start"
                android:text="@string/title_vehicle_details"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorGrey"
                android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/five_dp"
                android:padding="@dimen/ten_dp"
                android:src="@drawable/baseline_arrow_back_white_24"
                android:tint="@color/colorGrey"
                android:visibility="invisible" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_above="@+id/llAdView"
            android:layout_below="@+id/rlToolbar"
            android:layout_margin="@dimen/five_dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!--Condition-->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/tvType"
                        android:padding="@dimen/five_dp"
                        android:text="@string/vehicle_condition"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableTint="@color/colorPrimary"
                        android:layout_alignParentEnd="true"
                        android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
                        android:ems="4"
                        android:padding="@dimen/five_dp"
                        android:text="@string/vehicle_condition_old"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

            </RelativeLayout>

            <!--Type-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:drawableTint="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
                        android:focusable="false"
                        android:hint="@string/vehicle_title_hint_bike_car"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Brand-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_brand"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Model-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_model"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Build Year-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBuildYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_build_year"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Registration Year-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etRegistrationNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_registration_no"
                        android:inputType="text"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Fuel Type-->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFuelType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableTint="@color/colorPrimary"
                        android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
                        android:focusable="false"
                        android:hint="@string/vehicle_fuel_type"
                        android:textColor="@color/colorBlack" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
                        android:focusable="false"
                        android:hint="@string/vehicle_fuel_type"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Tank Capacity-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTankCapacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_tank_capacity"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Display Name-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDisplayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/vehicle_display_name"
                        android:text="-"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Purchase Date-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableEnd="@drawable/baseline_date_range_black_24"
                        android:drawableTint="@color/colorPrimary"
                        android:focusable="false"
                        android:hint="@string/vehicle_purchase_date"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Purchase Price-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPurchasePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_purchase_price"
                        android:inputType="number"
                        android:maxLength="8"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Km Reading-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etKmReading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_km_reading"
                        android:inputType="numberDecimal"
                        android:maxLength="8"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSave"
                       android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ten_dp"
                        android:background="@drawable/rounded_corner_back_theme"
                        android:ems="7"
                        android:gravity="center"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/hint_save"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvClear"
                       android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ten_dp"
                        android:background="@drawable/rounded_corner_back_theme"
                        android:ems="7"
                        android:gravity="center"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/hint_clear"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
            android:id="@+id/llAdView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible" />

    <LinearLayout
            android:id="@+id/llAdViewFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:orientation="vertical"
            android:visibility="visible" />

</LinearLayout>